maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:18: error: Unit does not take parameters
  gauche(){
          ^